# AE

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: blank.yml  deploy.yml  style-check.yml
src/: CMakeLists.txt  README.md
src/primitive/: BytesArray.hpp
tests/: CMakeLists.txt
tests/primitive/: CMakeLists.txt  TestBytesArray.cpp
